3_tester.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pirsos-tester
  namespace: pirsos
spec:
  selector:
    matchLabels:
      app: pirsos-tester
  replicas: 1
  template:
    metadata:
      labels:
        app: pirsos-tester
    spec:
      containers:
        - name: pirsos-tester
          image: krakensystems/pirsos-tester:latest
          ports:
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: pirsos-tester-svc
  namespace: pirsos
spec:
  type: NodePort
  selector:
    app: pirsos-tester
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pirsos-tester
  namespace: pirsos
spec:
  routes:
    - match: HostSNI(`tester.pirsos.xyz`)
      services:
        - name: pirsos-tester-svc
          namespace: pirsos
          port: 443
  tls:
    passthrough: true
